G1: Recent card set coarsening statistics wrong

XMLWordPrintable

    • gc
    • b24

      Running BigRamTester with a 20GB heap for a couple minutes, observing the coarsening statistics logs, the the data displayed after "Coarsening (recent)" seems a little bit abnormal:


      GC(54) Coarsening (recent): Inline->AoC 2119482 (3188) [...]
      GC(54) Coarsening (all): Inline->AoC 5064850 (6148) [...]
      GC(55) Coarsening (recent): Inline->AoC 3012918 (3101) [...]
      GC(55) Coarsening (all): Inline->AoC 5132400 (6289) [...]

      I.e. GC(55) Coarsening (recent): Inline->AoC should be something like

      GC(55) Coarsening (recent): Inline->AoC 67559 (41) [...]

      After looking at G1CardSet::print_coarsen_stats() the recent coarsening stats are calculated by:

      current total coarsening - coarsening happened in previous (the one before the latest) GC cycle

      but should be

      current total coarsening - previous total coarsening

      (reported in https://mail.openjdk.java.net/pipermail/hotspot-gc-dev/2022-May/039346.html )

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: