8286893: G1: Recent card set coarsening statistics wrong